LPS-95705 portal-impl - (portal.properties) adds a description for the Analytics Administrator role

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -2478,6 +2478,13 @@
     system.role.Administrator.description=Administrators are super users who can do anything.
 
     #
+    # Set the description of the Analytics Administrator system role.
+    #
+    # Env: LIFERAY_SYSTEM_PERIOD_ROLE_PERIOD__UPPERCASEA_NALYTICS_PERIOD__UPPERCASEA_DMINISTRATOR_PERIOD_DESCRIPTION
+    #
+    system.role.Analytics.Administrator.description=Analytics Administrators are users who can view data across the company, but cannot make changes except to the company preferences.
+
+    #
     # Set the description of the Guest system role.
     #
     # Env: LIFERAY_SYSTEM_PERIOD_ROLE_PERIOD__UPPERCASEG_UEST_PERIOD_DESCRIPTION
