--- a/modules/source-formatter.properties
+++ b/modules/source-formatter.properties
@@ -19,6 +19,7 @@
         commons-lang:commons-lang:2.6,\
         commons-validator:commons-validator:1.5.1,\
         javax.portlet:portlet-api:3.0.1,\
+        javax.servlet:javax.servlet-api:3.1.0,\
         org.apache.ant:ant:1.9.14,\
         org.jdom:jdom:1.1.3,\
         org.jsoup:jsoup:1.10.2,\
