LPS-98468 Add a new property in DataDefinitionFields: nestedDataDefinitionFields

--- a/modules/apps/data-engine/data-engine-rest-impl/rest-openapi.yaml
+++ b/modules/apps/data-engine/data-engine-rest-impl/rest-openapi.yaml
@@ -70,6 +70,11 @@ components:
                     type: boolean
                 name:
                     type: string
+                nestedDataDefinitionFields:
+                    items:
+                        $ref: '#/components/schemas/DataDefinitionField'
+                    type:
+                        array
                 repeatable:
                     type: boolean
                 tip:
