LPS-98886 Basic UI to create Variants

--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -12,9 +12,12 @@ contributor.context=Session
 contributor.user=User
 contributor.user-organization=Organization
 create-new-test=Create New Test
+create-new-variant=Create New Variant
 create-test=Create Test
 create-test-error=An unexpected error occurred while creating the A/B test.
 create-test-help-message=Create a new A/B test to optimize your page or experience.
+create-variant=Create Variant
+create-variant-error-message=An unexpected error occurred while creating the variant.
 criteria=Criteria
 criteria-cancel-confirmation-message=There are unsaved changes. Are you sure you want to exit?
 criteria-error-message-edit=Delete this condition. It was created from a custom field that no longer exists.
@@ -82,6 +85,8 @@ new-x-segment=New {0} Segment
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience.
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments.
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment.
+no-variants-message=No Variants for this Test
+no-variants-tip=Create a Variant to test against Control
 not-contains=Not Contains
 not-equals=Not Equals
 preview-members=Preview Members
@@ -93,6 +98,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Segments Analytics Cloud
 segments-service-configuration-name=Segments Service
 select-experience=Select Experience
+show-actions=Show Actions
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
 test-name=Test Name
@@ -100,6 +106,8 @@ test-name-is-required=A/B test name is required.
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=The segment cannot be deleted because it is required by one or more experiences.
 the-segment-could-not-be-found=The segment could not be found.
 there-are-no-segments=There are no segments.
+variant-control=Control
+variants=Variants
 untitled-segment=Untitled Segment
 user-segment=User Segment
 x-member={0} Member
