LPS-98954 Missing language keys

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -12,7 +12,9 @@ change-image=Change Image
 changes-saved-at-x=Changes saved at {0}.
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
 container=Container
+content-name=Content Name
 content-page-editor-comments-configuration-name=Content Page Editor Comments
+content-structure=Content Structure
 content-type=Content Type
 delete-experience=Delete Experience
 deprioritize-experience=Deprioritize Experience
@@ -22,6 +24,7 @@ draft-saved-at-x=Draft saved at {0}.
 dynamic-collection=Dynamic Collection
 edit-experience=Edit Experience
 edited-x=Edited {0}
+existing-structure=Existing Structure
 experience=Experience
 experience-help-message-empty-state=Create an experience to address a page to a specific audience. An experience is a copy of your current page. You can change content and layout for the new experience.
 experience-help-message-started-state=Visitors can match multiple experiences. If the changes conflict, the priority below will be respected. Use arrows in rows to order the list below.
@@ -42,6 +45,7 @@ map-background=Map Background
 map-to=Map to
 map[relational]=Map
 mapping-fields=Mapping Fields
+new-content=New Content
 new-experience=New Experience
 new-segment=New Segment
 no-asset-type-selected=No Asset Type Selected
@@ -74,6 +78,9 @@ show-editable-areas=Show Editable Areas
 show-resolved-comments=Show Resolved Comments
 space-between-columns=Space Between Columns
 specific-content=Specific Content
+step-x-of-x=Step {0} of {1}
+structure-name=Structure Name
+structure-type=Structure Type
 text-alignment=Text Alignment
 text-color=Text Color
 text-properties=Text properties
@@ -96,4 +103,5 @@ used-in-x-pages=Used in {0} Pages
 view-usages=View Usages
 widgets=Widgets
 x-default={0} (Default)
+x-fields={0} fields
 you-do-not-have-any-sections=You do not have any sections.
