--- a/modules/apps/login/login-web/src/main/resources/content/Language.properties
+++ b/modules/apps/login/login-web/src/main/resources/content/Language.properties
@@ -1,6 +1,8 @@
 an-email-will-be-sent-to-x-if-you-can-correctly-answer-the-following-question=An email will be sent to {0} if you can correctly answer the following question.
 javax.portlet.title.com_liferay_login_web_portlet_FastLoginPortlet=Fast Sign In
 javax.portlet.title.com_liferay_login_web_portlet_LoginPortlet=Sign In
+legacy-template-no-longer-used=Legacy Template (No Longer Used)
+sending-of-passwords-by-email-is-no-longer-supported-the-template-below-is-not-used-and-can-be-discarded=Sending of passwords by email is no longer supported. The template below is not used and can be discarded.
 thank-you-for-creating-an-account=Thank you for creating an account.
 thank-you-for-creating-an-account-your-password-was-sent-to-x=Thank you for creating an account. Your password was sent to {0}. Please check your inbox and spam folders.
 thank-you-for-creating-an-account.-you-will-be-notified-via-email-at-x-when-your-account-has-been-approved=Thank you for creating an account. You will be notified via email at {0} when your account has been approved.
