--- a/modules/apps/layout/layout-admin-web/build.gradle
+++ b/modules/apps/layout/layout-admin-web/build.gradle
@@ -20,8 +20,6 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.layout.api", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.content.page.editor.api", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.item.selector.api", version: "3.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.layout.page.template.api", version: "2.1.0"
-	compileOnly group: "com.liferay", name: "com.liferay.layout.page.template.service", version: "2.1.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.prototype.api", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.taglib", version: "4.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.mobile.device.rules.api", version: "4.0.0"
@@ -47,4 +45,6 @@ dependencies {
 	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
+	compileOnly project(":apps:layout:layout-page-template-api")
+	compileOnly project(":apps:layout:layout-page-template-service")
 }
