--- a/modules/apps/layout/layout-page-template-service/build.gradle
+++ b/modules/apps/layout/layout-page-template-service/build.gradle
@@ -9,7 +9,6 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.html.preview.api", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.admin.api", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.layout.api", version: "2.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.layout.page.template.api", version: "2.2.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.function", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
@@ -28,4 +27,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
+	compileOnly project(":apps:layout:layout-page-template-api")
 }
