--- a/modules/apps/portal-security/portal-security-ldap-impl/build.gradle
+++ b/modules/apps/portal-security/portal-security-ldap-impl/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.configuration.metatype.api", version: "1.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.configuration.persistence.api", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.instance.lifecycle.api", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.security.exportimport.api", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.security.ldap.api", version: "1.2.0"
