--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -5,6 +5,8 @@ action.MANAGE_SEGMENTS_ENTRIES=Manage Segments Entries
 action.SIMULATE_SEGMENTS_ENTRIES=Simulate Segments Entries
 anonymous-user-segments-cache-expiration-time-description=Define the time, in seconds, in which the anonymous segment cache is cleared.
 anonymous-user-segments-cache-expiration-time-name=Anonymous User Segments Cache Expiration Time
+bounce-rate=Bounce Rate
+click=Click
 conditions=Conditions
 conditions-match=Conditions Match
 content-recommendation=Content Recommendation
@@ -92,6 +94,7 @@ not-contains=Not Contains
 not-equals=Not Equals
 preview-members=Preview Members
 review-and-run-test=Review and Run Test
+scroll-depth=Scroll Depth
 segment-name-is-required=Segment name is required.
 segmentation-enabled-description=Disable this option to prevent user segmentation on every request.
 segmentation-enabled-name=Segmentation Enabled
@@ -99,6 +102,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Segments Analytics Cloud
 segments-service-configuration-name=Segments Service
 select-experience=Select Experience
+select-goal=Select Goal
 show-actions=Show Actions
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
@@ -107,6 +111,7 @@ test-name-is-required=A/B test name is required.
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=The segment cannot be deleted because it is required by one or more experiences.
 the-segment-could-not-be-found=The segment could not be found.
 there-are-no-segments=There are no segments.
+time-on-page=Time On Page
 untitled-segment=Untitled Segment
 user-segment=User Segment
 variant-control=Control
