LPS-85765 Add portlet-api-3.0.0.jar

--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -1301,6 +1301,7 @@ private List<Dependency> _getPortalArtifactsDependencies(List<File> relengProper
 	XmlSlurper xmlSlurper = new XmlSlurper()
 
 	List<String[]> artifactProperties = [
+		["gradle-plugins", "javax.portlet", "portlet-api", "3.0.0"],
 		["liferay-public-releases", "com.liferay", "com.liferay.arquillian.extension.junit.bridge", "1.0.10"],
 		["maven2", "org.jboss.arquillian.junit", "arquillian-junit-container", "1.1.10.Final"]
 	]
