--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -1300,6 +1300,8 @@ private List<Dependency> _getPortalArtifactsDependencies(List<File> relengProper
 	XmlSlurper xmlSlurper = new XmlSlurper()
 
 	List<String[]> artifactProperties = [
+		["gradle-plugins", "biz.aQute.bnd", "biz.aQute.bnd.annotation", "4.2.0"],
+		["gradle-plugins", "com.liferay", "biz.aQute.bndlib", "4.2.0-20190219.175746-114-LIFERAY-CACHED.LIFERAY-PATCHED-1"],
 		["gradle-plugins", "javax.portlet", "portlet-api", "3.0.0"],
 		["gradle-plugins", "javax.servlet", "javax.servlet-api", "3.0.1"],
 		["liferay-public-releases", "com.liferay", "com.liferay.arquillian.extension.junit.bridge", "1.0.10"],
