--- a/modules/releng.gradle
+++ b/modules/releng.gradle
@@ -1304,6 +1304,11 @@ private List<Dependency> _getPortalArtifactsDependencies(List<File> relengProper
 		["gradle-plugins", "com.liferay", "biz.aQute.bndlib", "4.2.0-20190219.175746-114-LIFERAY-CACHED.LIFERAY-PATCHED-1"],
 		["gradle-plugins", "javax.portlet", "portlet-api", "3.0.0"],
 		["gradle-plugins", "javax.servlet", "javax.servlet-api", "3.0.1"],
+		["gradle-plugins", "org.osgi", "org.osgi.annotation.versioning", "1.1.0"],
+		["gradle-plugins", "org.osgi", "org.osgi.service.cm", "1.5.0"],
+		["gradle-plugins", "org.osgi", "org.osgi.service.component", "1.3.0"],
+		["gradle-plugins", "org.osgi", "org.osgi.service.component.annotations", "1.3.0"],
+		["gradle-plugins", "org.osgi", "osgi.core", "6.0.0"],
 		["liferay-public-releases", "com.liferay", "com.liferay.arquillian.extension.junit.bridge", "1.0.10"],
 		["maven2", "org.jboss.arquillian.junit", "arquillian-junit-container", "1.1.10.Final"]
 	]
