LPS-99364 Fix generateSampleProject parameter

--- a/modules/sdk/project-templates/project-templates-war-mvc-portlet/build.gradle
+++ b/modules/sdk/project-templates/project-templates-war-mvc-portlet/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 }
 
 generateSampleProject {
-	args "--liferayVersion", "7.2", "--name", "samplewarmvcportlet"
+	args "--liferay-version", "7.2", "--name", "samplewarmvcportlet"
 
 	doFirst {
 		delete "${buildDir}/samplewarmvcportlet"
