--- a/modules/sdk/project-templates/project-templates-rest/build.gradle
+++ b/modules/sdk/project-templates/project-templates-rest/build.gradle
@@ -4,7 +4,7 @@ dependencies {
 }
 
 generateSampleProject {
-	args "--liferayVersion", "7.2", "--name", "samplerest"
+	args "--liferay-version", "7.2", "--name", "samplerest"
 
 	doFirst {
 		delete "${buildDir}/samplerest"
