LPS-99168 Language properties

--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language.properties
@@ -2,12 +2,15 @@ align=Align
 basic-components=Basic Components
 border-color=Border Color
 card=Card
+fit=Fit
 h1=H1
 h2=H2
 h3=H3
 h4=H4
 heading=Heading
 heading-level=Heading Level
+image-size=Image Size
+original-size=Original Size
 outline=Outline
 secondary=Secondary
 slider=Slider
