--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -55,6 +55,7 @@ prioritize-experience=Prioritize Experience
 publish-page=Publish Page
 reducing-the-number-of-columns-will-lose-the-content-added-to-the-deleted-columns-are-you-sure-you-want-to-proceed=Reducing the number of columns will lose the content added to the deleted columns. Are you sure you want to proceed?
 remove-background=Remove Background
+reopen=Reopen
 restore-values=Restore Values
 saved=Saved
 saving-changes=Saving changes...
