LPS-99397 Adding dummy show resolved comments checkbox

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -70,6 +70,7 @@ select-image=Select Image
 select-the-content-source-for-this-display-page-template=Select the content source for this display page template.
 self=Self
 show-editable-areas=Show Editable Areas
+show-resolved-comments=Show Resolved Comments
 space-between-columns=Space Between Columns
 specific-content=Specific Content
 text-alignment=Text Alignment
