--- a/modules/apps/layout/layout-content-page-editor-web/package.json
+++ b/modules/apps/layout/layout-content-page-editor-web/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@clayui/button": "^3.0.0-milestone.2",
 		"@clayui/drop-down": "^3.0.0-milestone.2",
+		"@clayui/form": "^3.0.0-milestone.2",
 		"@clayui/icon": "^3.0.0-milestone.2",
 		"@clayui/modal": "^3.0.0-milestone.2",
 		"@clayui/sticker": "^3.0.0-milestone.2",
