--- a/modules/apps/layout/layout-content-page-editor-web/package.json
+++ b/modules/apps/layout/layout-content-page-editor-web/package.json
@@ -4,6 +4,7 @@
 		"@clayui/alert": "^3.0.0-milestone.2",
 		"@clayui/button": "3.0.0-milestone.2",
 		"@clayui/drop-down": "3.0.0-milestone.2",
+		"@clayui/form": "^3.0.0-milestone.2",
 		"@clayui/icon": "3.0.0-milestone.2",
 		"@clayui/label": "^3.0.0-milestone.2",
 		"@clayui/modal": "3.0.0-milestone.2",
