LPS-99171 Language properties

--- a/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language.properties
+++ b/modules/apps/fragment/fragment-collection-contributor/fragment-collection-contributor-basic-component/src/main/resources/content/Language.properties
@@ -1,7 +1,11 @@
 align=Align
+background-color=Background Color
 basic-components=Basic Components
 border-color=Border Color
+border-radius=Border Radius
+box-shadow=Box Shadow
 card=Card
+content-align=Content Align
 fit=Fit
 h1=H1
 h2=H2
