--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -77,6 +77,7 @@ less-than-or-equals=Less Than or Equals
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Segments Entry
 model.resource.com.liferay.segments.model.SegmentsExperience=Segments Experience
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test
 new-x-segment=New {0} Segment
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience.
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments.
