LPS-99409 Add missing resource translation

--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -66,6 +66,7 @@ less-than-or-equals=Less Than or Equals
 model.resource.com.liferay.segments=Segments
 model.resource.com.liferay.segments.model.SegmentsEntry=Segments Entry
 model.resource.com.liferay.segments.model.SegmentsExperience=Segments Experience
+model.resource.com.liferay.segments.model.SegmentsExperiment=AB Test
 new-x-segment=New {0} Segment
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments.
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment.
