LPS-99390 Ensures IE11 frontend-editor-alloyeditor-web support by processing files with babel but without npm-bundler

--- a/modules/apps/frontend-editor/frontend-editor-alloyeditor-web/package.json
+++ b/modules/apps/frontend-editor/frontend-editor-alloyeditor-web/package.json
@@ -4,6 +4,7 @@
 	},
 	"name": "frontend-editor-alloyeditor-web",
 	"scripts": {
+		"build": "liferay-npm-scripts build",
 		"checkFormat": "liferay-npm-scripts check",
 		"format": "liferay-npm-scripts fix"
 	},
