LPS-99390 Ensures IE11 portal-search-web support by processing files with babel but without npm-bundler

--- a/modules/apps/portal-search/portal-search-web/package.json
+++ b/modules/apps/portal-search/portal-search-web/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "portal-search-web",
 	"scripts": {
+		"build": "liferay-npm-scripts build",
 		"checkFormat": "liferay-npm-scripts check",
 		"format": "liferay-npm-scripts fix",
 		"test": "karma start"
