LPS-99390 Ensures IE11 product-navigation-simulation-device support by processing files with babel but without npm-bundler

--- a/modules/package.json
+++ b/modules/package.json
@@ -58,7 +58,8 @@
 			"apps/map/map-common",
 			"apps/map/map-google-maps",
 			"apps/map/map-openstreetmap",
-			"apps/portal-portlet-bridge/portal-portlet-bridge-soy-impl"
+			"apps/portal-portlet-bridge/portal-portlet-bridge-soy-impl",
+			"apps/product-navigation/product-navigation-simulation-device"
 		]
 	}
 }
