LPS-99308 Expand tests

--- a/modules/sdk/gradle-plugins-workspace/src/gradleTest/angularTest/build.gradle
+++ b/modules/sdk/gradle-plugins-workspace/src/gradleTest/angularTest/build.gradle
@@ -2,4 +2,9 @@ task runGradleTest
 
 runGradleTest {
 	dependsOn ":clean"
+
+	doLast {
+		assert project(":modules:angular").plugins.findPlugin('com.liferay.osgi.plugin') != null
+		assert project(":modules:angular").plugins.findPlugin('com.liferay.frontend.plugin') == null
+	}
 }
