--- a/modules/apps/app-builder/app-builder-web/package.json
+++ b/modules/apps/app-builder/app-builder-web/package.json
@@ -6,6 +6,7 @@
 		"@clayui/drop-down": "3.0.0-milestone.2",
 		"@clayui/form": "^3.0.0-milestone.2",
 		"@clayui/icon": "3.0.0-milestone.2",
+		"@clayui/label": "3.0.0-milestone.2",
 		"@clayui/loading-indicator": "3.0.0-milestone.2",
 		"@clayui/navigation-bar": "3.0.0-milestone.2",
 		"@clayui/pagination": "3.0.0-milestone.2",
