--- a/portal-impl/build.xml
+++ b/portal-impl/build.xml
@@ -836,7 +836,7 @@ This target does not format .es.js files. Please run the following command from 
 
 	<target name="format-source-bnd">
 		<antcall target="format-source-all">
-			<param name="source.file.extensions" value="bnd,gradle" />
+			<param name="source.file.extensions" value="bnd,gradle,json" />
 		</antcall>
 	</target>
 
