--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -85,8 +85,7 @@ new-x-segment=New {0} Segment
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience.
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments.
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment.
-no-variants-message=No Variants for this Test
-no-variants-tip=Create a Variant to test against Control
+no-variants-have-been-created-for-this-test=No variants have been created for this test.
 not-contains=Not Contains
 not-equals=Not Equals
 preview-members=Preview Members
@@ -106,10 +105,11 @@ test-name-is-required=A/B test name is required.
 the-segment-cannot-be-deleted-because-it-is-required-by-one-or-more-experiences=The segment cannot be deleted because it is required by one or more experiences.
 the-segment-could-not-be-found=The segment could not be found.
 there-are-no-segments=There are no segments.
-variant-control=Control
-variants=Variants
 untitled-segment=Untitled Segment
 user-segment=User Segment
+variant-control=Control
+variants=Variants
+variants-help=Create at least one variant to run the test.
 x-member={0} Member
 x-members={0} Members
 x-properties={0} Properties
