build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -364,7 +364,7 @@ com.liferay.item.selector.upload.web=3.0.1
 com.liferay.item.selector.url.web=3.0.2
 com.liferay.item.selector.web=4.0.20
 com.liferay.jaxws.osgi.bridge=2.0.2
-com.liferay.journal.api=3.6.1
+com.liferay.journal.api=3.7.0
 com.liferay.journal.content.asset.addon.entry.api=1.0.2
 com.liferay.journal.content.asset.addon.entry.comments=2.0.2
 com.liferay.journal.content.asset.addon.entry.conversions=3.0.4
@@ -591,7 +591,7 @@ com.liferay.portal.dao.test=1.0.0
 com.liferay.portal.document.library.compat.test=1.0.0
 com.liferay.portal.equinox.log.bridge=2.0.13
 com.liferay.portal.executor=3.0.3
-com.liferay.portal.impl=3.43.1
+com.liferay.portal.impl=3.44.0
 com.liferay.portal.impl.blogs.compat=1.0.0
 com.liferay.portal.impl.document.library.compat=1.0.0
 com.liferay.portal.impl.message.boards.compat=1.0.0
@@ -605,7 +605,7 @@ com.liferay.portal.instances.service=2.0.5
 com.liferay.portal.instances.web=2.0.12
 com.liferay.portal.jmx=5.0.4
 com.liferay.portal.jmx.api=2.0.1
-com.liferay.portal.kernel=3.71.1
+com.liferay.portal.kernel=3.72.0
 com.liferay.portal.kernel.blogs.compat=1.0.0
 com.liferay.portal.kernel.concurrent.compat=1.0.0
 com.liferay.portal.kernel.document.library.compat=1.0.0
@@ -913,6 +913,7 @@ com.liferay.roles.admin.web=2.0.40
 com.liferay.roles.item.selector.api=1.0.3
 com.liferay.roles.item.selector.web=1.0.4
 com.liferay.roles.selector.web=2.0.8
+com.liferay.roles.test=1.0.0
 com.liferay.roles.uad=3.0.3
 com.liferay.roles.uad.test=1.0.0
 com.liferay.rss.api=2.0.2
