LRQA-51241 Add title localization test to stable

--- a/test.properties
+++ b/test.properties
@@ -2117,7 +2117,8 @@
         **/portal-upgrade-impl/**/*Test.java,\
         **/portal-dao-test/**/*Test.java,\
         **/test/**/UpgradeProcessTest.java,\
-        **/test/**/DBInspectorUnitTest.java
+        **/test/**/DBInspectorUnitTest.java,\
+        **/portlet-title-localization-test/**/*Test.java
 
     test.batch.dist.app.servers[stable]=tomcat
 
