--- a/test.properties
+++ b/test.properties
@@ -2112,12 +2112,12 @@
     #
 
     test.batch.class.names.includes[stable]=\
-        **/portal-upgrade-test/**/*Test.java,\
-        **/portal-upgrade-impl/**/*Test.java,\
         **/portal-dao-test/**/*Test.java,\
-        **/test/**/UpgradeProcessTest.java,\
+        **/portal-upgrade-impl/**/*Test.java,\
+        **/portal-upgrade-test/**/*Test.java,\
+        **/portlet-title-localization-test/**/*Test.java,\
         **/test/**/DBInspectorUnitTest.java,\
-        **/portlet-title-localization-test/**/*Test.java
+        **/test/**/UpgradeProcessTest.java
 
     test.batch.dist.app.servers[stable]=tomcat
 
