LRCI-532 Add carolmoreschi to allowed senders

--- a/ci.properties
+++ b/ci.properties
@@ -7,6 +7,7 @@ allowed.sender.names[brianchandotcom]=\
     austinchiang,\
     brianchiu,\
     brianwulbern,\
+    carolmoreschi,\
     caustin582,\
     cgoncas,\
     christianstokes,\
