--- a/modules/apps/message-boards/message-boards-service/build.gradle
+++ b/modules/apps/message-boards/message-boards-service/build.gradle
@@ -8,7 +8,6 @@ dependencies {
 
 	compileOnly group: "com.liferay", name: "com.liferay.comment.api", version: "4.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.exportimport.api", version: "4.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.message.boards.api", version: "5.1.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.function", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.mail", version: "3.0.0"
@@ -38,4 +37,5 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.metatype", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
+	compileOnly project(":apps:message-boards:message-boards-api")
 }
