--- a/modules/apps/asset/asset-entry-rel-test/build.gradle
+++ b/modules/apps/asset/asset-entry-rel-test/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.arquillian.extension.junit.bridge", version: "1.0.17"
 	testIntegrationCompile project(":apps:asset:asset-entry-rel-api")
+	testIntegrationCompile project(":apps:asset:asset-test-util")
 }
