LPS-99482 Use AssetTestUtil from asset-test-util module

--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable-test/build.gradle
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-editable-test/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 	testIntegrationCompile project (":apps:asset:asset-api")
 	testIntegrationCompile project (":apps:fragment:fragment-api")
 	testIntegrationCompile project (":apps:fragment:fragment-service")
+	testIntegrationCompile project(":apps:asset:asset-test-util")
 	testIntegrationCompile project(":core:petra:petra-string")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
