--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language.properties
@@ -29,6 +29,8 @@ drag-and-drop-criterion-from-the-right-to-add-rules=Drag and drop criterion from
 drag-and-drop-over-an-existing-criteria-to-form-groups=Drag and drop over an existing criteria to form groups.
 edit-test=Edit Test
 edit-test-error=An unexpected error occurred while editing the A/B test.
+edit-variant=Edit Variant
+edit-variant-error-message=An unexpected error occurred while editing the variant.
 empty-conditions-message=To create a new one, drag items from the sidebar and drop them here.
 enable-content-recommendation=Enable Content Recommendation
 enable-content-recommendation-help=Enable this option to filter the content with user's terms of interest.
