--- a/modules/apps/frontend-js/frontend-js-spa-web/package.json
+++ b/modules/apps/frontend-js/frontend-js-spa-web/package.json
@@ -4,7 +4,7 @@
 		"metal": "2.16.8",
 		"metal-dom": "2.16.8",
 		"metal-uri": "2.4.0",
-		"senna": "2.7.7"
+		"senna": "3.0.0-milestone.1"
 	},
 	"name": "frontend-js-spa-web",
 	"scripts": {
