--- a/modules/apps/portal-portlet-bridge/portal-portlet-bridge-soy-impl/package.json
+++ b/modules/apps/portal-portlet-bridge/portal-portlet-bridge-soy-impl/package.json
@@ -4,10 +4,10 @@
 		"metal-component": "2.16.8",
 		"metal-dom": "2.16.8",
 		"metal-path-parser": "1.0.4",
-		"metal-router": "3.6.3",
+		"metal-router": "4.0.0-milestone.1",
 		"metal-state": "2.16.8",
 		"metal-uri": "2.4.0",
-		"senna": "2.7.7"
+		"senna": "3.0.0-milestone.1"
 	},
 	"name": "portal-portlet-bridge-soy-impl",
 	"scripts": {
