--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language.properties
@@ -40,6 +40,8 @@ parameter-x-provides-access-to-the-current-fragment-node-use-it-to-manipulate-fr
 please-provide-a-valid-configuration-for-the-fragment=Please provide a valid configuration for the fragment.
 propagate=Propagate
 propagation=Propagation
+read-only-view=Read Only View
+read-only-view-help=The fragment cannot be edited because it belongs to a different site.
 rename-fragment=Rename Fragment
 section=Section
 select-collection=Select Collection
