--- a/modules/apps/frontend-js/frontend-js-web/package.json
+++ b/modules/apps/frontend-js/frontend-js-web/package.json
@@ -24,12 +24,15 @@
 			"Liferay": {}
 		},
 		"setupFiles": [
-			"<rootDir>/test/liferay/portlet/mock/setup.es.js"
+			"<rootDir>/test/liferay/portlet/mock/setup.es.js",
+			"<rootDir>/test/liferay/util/mock/setup.es.js"
 		],
 		"testPathIgnorePatterns": [
 			"<rootDir>/node_modules/",
 			"<rootDir>/test/liferay/portlet/mock/portlet_data.es.js",
-			"<rootDir>/test/liferay/portlet/mock/setup.es.js"
+			"<rootDir>/test/liferay/portlet/mock/setup.es.js",
+			"<rootDir>/test/liferay/util/mock/mock/headers.es.js",
+			"<rootDir>/test/liferay/util/mock/setup.es.js"
 		],
 		"testResultsProcessor": "liferay-jest-junit-reporter",
 		"testURL": "http://localhost",
