LPS-98937 combine tests to simplify

--- a/modules/sdk/gradle-plugins-workspace/src/gradleTest/jsPortlet/build.gradle
+++ b/modules/sdk/gradle-plugins-workspace/src/gradleTest/jsPortlet/build.gradle
@@ -4,6 +4,8 @@ runGradleTest {
 	dependsOn ":distBundle"
 
 	doLast {
+		assert project(":modules:angular").plugins.findPlugin('com.liferay.osgi.plugin') != null
+		assert project(":modules:angular").plugins.findPlugin('com.liferay.frontend.plugin') == null
 		assert project(":modules:my-project").plugins.findPlugin('com.liferay.frontend.plugin') != null
 		assert project(":modules:my-project").plugins.findPlugin('com.liferay.osgi.plugin') == null
 		assert project(":modules:my-project").file("dist/my-project-1.0.0.jar").exists()
