--- a/modules/sdk/gradle-plugins-workspace/src/gradleTest/jsPortlet/modules/angular/build.gradle
+++ b/modules/sdk/gradle-plugins-workspace/src/gradleTest/jsPortlet/modules/angular/build.gradle
@@ -7,3 +7,6 @@ dependencies {
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 }
+
+jar.enabled = false
+npmRunBuild.enabled = false
