--- a/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/app-builder/app-builder-lang/src/main/resources/content/Language.properties
@@ -20,4 +20,5 @@ there-are-no-custom-objects-yet=There are no custom objects yet.
 there-are-no-deployments-yet=There are no deployments yet.
 there-are-no-form-views-yet=There are no form views yet.
 there-are-no-table-views-yet=There are no table views yet.
+untitled-table-view=Untitled Table View
 widget=Widget
