--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -103,5 +103,5 @@ used-in-x-pages=Used in {0} Pages
 view-usages=View Usages
 widgets=Widgets
 x-default={0} (Default)
-x-fields={0} fields
+x-fields={0} Fields
 you-do-not-have-any-sections=You do not have any sections.
