--- a/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/build.gradle
+++ b/modules/apps/fragment/fragment-entry-processor/fragment-entry-processor-freemarker-test/build.gradle
@@ -7,6 +7,8 @@ dependencies {
 	testIntegrationCompile group: "org.jsoup", name: "jsoup", version: "1.10.2"
 	testIntegrationCompile project (":apps:fragment:fragment-api")
 	testIntegrationCompile project (":apps:fragment:fragment-service")
+	testIntegrationCompile project(":apps:journal:journal-api")
+	testIntegrationCompile project(":apps:journal:journal-test-util")
 	testIntegrationCompile project(":core:petra:petra-string")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
