--- a/test.properties
+++ b/test.properties
@@ -1981,7 +1981,8 @@
         ${testray.team.engineering.component.names},\
         ${testray.team.liferay-connected-services.component.names},\
         ${testray.team.marketplace.component.names},\
-        ${testray.team.search-and-security.component.names},\
+        ${testray.team.search.component.names},\
+        ${testray.team.security.component.names},\
         ${testray.team.social-office.component.names},\
         ${testray.team.staging.component.names},\
         ${testray.team.support-qa.component.names},\
@@ -2022,7 +2023,8 @@
         frontend-infrastructure,\
         liferay-connected-services,\
         marketplace,\
-        search-and-security,\
+        search,\
+        security,\
         social-office,\
         staging,\
         support-qa,\
@@ -2112,18 +2114,20 @@
         Marketplace,\
         Plugin Installer
 
-    testray.team.search-and-security.component.names=\
+    testray.team.search.component.names=\
+        Elasticsearch Impl,\
+        SOLR Impl,\
+        Web Search
+
+    testray.team.security.component.names=\
         AntiSamy,\
         CAPTCHA,\
-        Elasticsearch Impl,\
         LDAP,\
         Login,\
         OAuth 2,\
         Permissions,\
         SAML,\
         Security,\
-        SOLR Impl,\
-        Web Search,\
         XSS
 
     testray.team.social-office.component.names=\
