--- a/test.properties
+++ b/test.properties
@@ -1792,7 +1792,7 @@
         Wiki
 
     testray.team.core-infrastructure.component.names=\
-        Antisamy Hook,\
+        AntiSamy,\
         App Manager,\
         APIs,\
         Application Standards,\
@@ -1803,7 +1803,7 @@
         Deployment,\
         Development Tools,\
         Document Library Stores,\
-        Elastic Search Impl,\
+        Elasticsearch Impl,\
         Localization Hooks,\
         Mobile Device Rules,\
         Permissions,\
