LRQA-51220 Create Search and Security component teams

--- a/test.properties
+++ b/test.properties
@@ -1708,6 +1708,8 @@
         ${testray.team.engineering.component.names},\
         ${testray.team.liferay-connected-services.component.names},\
         ${testray.team.marketplace.component.names},\
+        ${testray.team.search.component.names},\
+        ${testray.team.security.component.names},\
         ${testray.team.social-office.component.names},\
         ${testray.team.staging.component.names},\
         ${testray.team.support-qa.component.names},\
@@ -1747,6 +1749,8 @@
         engineering,\
         liferay-connected-services,\
         marketplace,\
+        search,\
+        security,\
         social-office,\
         staging,\
         support-qa,\
@@ -1792,7 +1796,6 @@
         Wiki
 
     testray.team.core-infrastructure.component.names=\
-        AntiSamy,\
         App Manager,\
         APIs,\
         Application Standards,\
@@ -1803,27 +1806,20 @@
         Deployment,\
         Development Tools,\
         Document Library Stores,\
-        Elasticsearch Impl,\
         Localization Hooks,\
         Mobile Device Rules,\
-        Permissions,\
         Portal Instances,\
         Portal Services,\
         Portal Settings,\
         Rolling Restart,\
-        SAML,\
         Sample Portlet Plugins,\
-        Security,\
         Server Administration,\
         Setup Wizard,\
-        SOLR Impl,\
         Test Plugins,\
         Theme Loader,\
         Upgrades Core Infrastructure,\
         Util,\
-        Web Search,\
-        WSRP,\
-        XSS
+        WSRP
 
     testray.team.developer-tools.component.names=\
         Blade,\
@@ -1838,6 +1834,18 @@
     testray.team.marketplace.component.names=\
         Marketplace,\
         Plugin Installer
+
+    testray.team.search.component.names=\
+        Elasticsearch Impl,\
+        SOLR Impl,\
+        Web Search
+
+    testray.team.security.component.names=\
+        AntiSamy,\
+        Permissions,\
+        SAML,\
+        Security,\
+        XSS
 
     testray.team.social-office.component.names=\
         Social Office CE,\
