--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -11,8 +11,10 @@ browse-all=Browse All
 change-image=Change Image
 changes-saved-at-x=Changes saved at {0}.
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
+comments-enabled=Comments Enabled
+comments-enabled-description=Set this to true to enable comments during content page edition.
 container=Container
-content-page-editor-comments-configuration-name=Content Page Editor Comments
+content-page-editor-configuration-name=Content Page Editor
 content-type=Content Type
 delete-experience=Delete Experience
 deprioritize-experience=Deprioritize Experience
