LPS-99289 Making configuration visible in Pages -> Content Page Editor

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -11,9 +11,11 @@ browse-all=Browse All
 change-image=Change Image
 changes-saved-at-x=Changes saved at {0}.
 changes-to-experiences-are-applied-immediately=Changes to experiences are applied immediately.
+comments-enabled=Comments Enabled
+comments-enabled-description=Set this to true to enable comments during content page edition.
 container=Container
 content-name=Content Name
-content-page-editor-comments-configuration-name=Content Page Editor Comments
+content-page-editor-configuration-name=Content Page Editor
 content-structure=Content Structure
 content-type=Content Type
 delete-experience=Delete Experience
