LPS-96727 Replace metal-uri with URL

--- a/modules/apps/layout/layout-admin-web/package.json
+++ b/modules/apps/layout/layout-admin-web/package.json
@@ -12,8 +12,7 @@
 		"metal-position": "2.1.2",
 		"metal-soy": "2.16.8",
 		"metal-state": "2.16.8",
-		"metal-throttle": "3.0.1",
-		"metal-uri": "2.4.0"
+		"metal-throttle": "3.0.1"
 	},
 	"name": "layout-admin-web",
 	"scripts": {
