--- a/modules/apps/fragment/fragment-web/package.json
+++ b/modules/apps/fragment/fragment-web/package.json
@@ -5,8 +5,7 @@
 		"metal-component": "2.16.8",
 		"metal-dom": "2.16.8",
 		"metal-soy": "2.16.8",
-		"metal-state": "2.16.8",
-		"metal-uri": "2.4.0"
+		"metal-state": "2.16.8"
 	},
 	"name": "fragment-web",
 	"scripts": {
