--- a/modules/apps/flags/flags-taglib/build.gradle
+++ b/modules/apps/flags/flags-taglib/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.flags.api", version: "4.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.frontend.js.loader.modules.extender.api", version: "3.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib", version: "4.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.clay", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.soy", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
