--- a/modules/apps/data-engine/data-engine-rest-impl/package.json
+++ b/modules/apps/data-engine/data-engine-rest-impl/package.json
@@ -1,16 +1,11 @@
 {
-	"dependencies": {
-		"classnames": "^2.2.6",
-		"metal-clipboard": "2.0.1",
-		"metal-dom": "2.16.8",
-		"metal-drag-drop": "3.3.1",
-		"metal-events": "2.16.8",
-		"metal-jsx": "2.16.8",
-		"metal-position": "2.1.2",
-		"metal-state": "2.16.8",
-		"object-hash": "^1.3.0"
-	},
+	"main": "index.es.js",
 	"name": "data-engine-rest-impl",
 	"private": true,
+	"scripts": {
+		"build": "liferay-npm-scripts build",
+		"checkFormat": "liferay-npm-scripts check",
+		"format": "liferay-npm-scripts fix"
+	},
 	"version": "1.0.34"
 }
