--- a/modules/apps/app-builder/app-builder-rest-impl/build.gradle
+++ b/modules/apps/app-builder/app-builder-rest-impl/build.gradle
@@ -17,4 +17,5 @@ dependencies {
 	compileOnly project(":apps:portal-odata:portal-odata-api")
 	compileOnly project(":apps:portal-vulcan:portal-vulcan-api")
 	compileOnly project(":core:petra:petra-function")
+	compileOnly project(":core:petra:petra-string")
 }
