LPS-99573 Change DTO status column type

--- a/modules/apps/app-builder/app-builder-rest-impl/rest-openapi.yaml
+++ b/modules/apps/app-builder/app-builder-rest-impl/rest-openapi.yaml
@@ -32,7 +32,7 @@ components:
                     format: int64
                     type: integer
                 status:
-                    type: integer
+                    type: string
                 userId:
                     format: int64
                     type: integer
