--- a/modules/apps/segments/segments-asah-rest-impl/rest-openapi.yaml
+++ b/modules/apps/segments/segments-asah-rest-impl/rest-openapi.yaml
@@ -20,16 +20,20 @@ components:
                     type: integer
                 status:
                     type: string
+        Status:
+            properties:
+                status:
+                    type: string
+            type: object
 info:
     description: ""
     title: "Segments Asah"
     version: v1.0
 openapi: 3.0.1
 paths:
-    "/experiments/{experimentId}":
-        patch:
-            description: ""
-            operationId: patchExperiment
+    "/experiments/{experimentId}/status":
+        post:
+            operationId: postExperimentStatus
             parameters:
                 - in: path
                   name: experimentId
@@ -39,9 +43,12 @@ paths:
                       type: integer
             requestBody:
                 content:
-                    text/plain:
+                    application/json:
                         schema:
-                            type: string
+                            $ref: "#/components/schemas/Status"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/Status"
             responses:
                 200:
                     content:
@@ -52,4 +59,4 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/Experiment"
                     description: ""
-            tags: ["Experiment"]
+            tags: ["Status"]
