--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language.properties
@@ -46,6 +46,7 @@ lead=Lead
 map-background=Map Background
 map-to=Map to
 map[relational]=Map
+mapped-contents=Mapped Contents
 mapping-fields=Mapping Fields
 new-content=New Content
 new-experience=New Experience
