--- a/test.properties
+++ b/test.properties
@@ -1168,6 +1168,7 @@
         functional-smoke-tomcat80-db2111-jdk8,\
         functional-smoke-tomcat80-mariadb102-jdk8,\
         functional-smoke-tomcat80-mysql56-jdk8,\
+        functional-smoke-tomcat80-mysql56-jdk8_redhat,\
         functional-smoke-tomcat80-mysql56-jdk8_zulu,\
         functional-smoke-tomcat80-oracle122-jdk8,\
         functional-smoke-tomcat80-postgresql10-jdk8,\
