build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -1,3 +1,4 @@
+com.liferay.account.admin.web=1.0.0
 com.liferay.account.api=1.0.0
 com.liferay.account.service=1.0.0
 com.liferay.account.test=1.0.0
@@ -49,6 +50,7 @@ com.liferay.announcements.uad=5.0.0
 com.liferay.announcements.uad.test=1.0.0
 com.liferay.announcements.web=5.0.0
 com.liferay.app.builder.api=1.0.0
+com.liferay.app.builder.lang=1.0.0
 com.liferay.app.builder.rest.api=1.0.0
 com.liferay.app.builder.rest.client=1.0.0
 com.liferay.app.builder.rest.impl=1.0.0
@@ -221,7 +223,7 @@ com.liferay.currency.converter.api=3.0.0
 com.liferay.currency.converter.web=4.0.0
 com.liferay.data.engine.api=2.0.0
 com.liferay.data.engine.lang=2.0.0
-com.liferay.data.engine.rest.api=8.0.0
+com.liferay.data.engine.rest.api=9.0.0
 com.liferay.data.engine.rest.client=2.0.0
 com.liferay.data.engine.rest.impl=2.0.0
 com.liferay.data.engine.rest.test=1.0.0
@@ -275,6 +277,8 @@ com.liferay.document.library.repository.cmis.impl=5.0.0
 com.liferay.document.library.repository.external.api=4.0.0
 com.liferay.document.library.repository.portlet.file.repository.impl=2.0.0
 com.liferay.document.library.repository.portlet.file.repository.test=1.0.0
+com.liferay.document.library.repository.portlet.repository.impl=2.0.0
+com.liferay.document.library.repository.portlet.repository.test=1.0.0
 com.liferay.document.library.repository.search=6.0.0
 com.liferay.document.library.service=5.0.0
 com.liferay.document.library.sync.api=3.0.0
@@ -822,6 +826,9 @@ com.liferay.portal.search.api=4.0.0
 com.liferay.portal.search.elasticsearch6.api=4.0.0
 com.liferay.portal.search.elasticsearch6.impl=4.0.0
 com.liferay.portal.search.elasticsearch6.spi=2.0.0
+com.liferay.portal.search.elasticsearch7.api=1.0.0
+com.liferay.portal.search.elasticsearch7.impl=1.0.0
+com.liferay.portal.search.elasticsearch7.spi=1.0.0
 com.liferay.portal.search.engine.adapter.api=4.0.0
 com.liferay.portal.search.solr7.api=3.0.0
 com.liferay.portal.search.solr7.impl=3.0.0
@@ -934,7 +941,7 @@ com.liferay.portal.tools.java.parser=1.0.21
 com.liferay.portal.tools.portal.compat.bytecode.transformer=4.0.0
 com.liferay.portal.tools.rest.builder=1.0.24
 com.liferay.portal.tools.sample.sql.builder=3.0.0
-com.liferay.portal.tools.service.builder=1.0.294
+com.liferay.portal.tools.service.builder=1.0.295
 com.liferay.portal.tools.service.builder.test.api=1.0.0
 com.liferay.portal.tools.service.builder.test.service=1.0.0
 com.liferay.portal.tools.service.builder.test.test=1.0.0
@@ -943,6 +950,7 @@ com.liferay.portal.tools.soy.builder=3.0.5
 com.liferay.portal.tools.theme.builder=1.1.8
 com.liferay.portal.tools.upgrade.table.builder=1.0.10
 com.liferay.portal.tools.wsdd.builder=1.0.11
+com.liferay.portal.transaction.test=1.0.0
 com.liferay.portal.uad=5.0.0
 com.liferay.portal.uad.test=1.0.0
 com.liferay.portal.upgrade.api=4.0.0
@@ -1166,7 +1174,7 @@ com.liferay.social.group.statistics.web=5.0.0
 com.liferay.social.requests.web=4.0.0
 com.liferay.social.user.statistics.api=4.0.0
 com.liferay.social.user.statistics.web=6.0.0
-com.liferay.source.formatter=1.0.897
+com.liferay.source.formatter=1.0.901
 com.liferay.staging.api=5.0.0
 com.liferay.staging.bar.web=4.0.0
 com.liferay.staging.configuration.web=4.0.0
