build.gradle auto SF

--- a/modules/modules.properties
+++ b/modules/modules.properties
@@ -264,6 +264,8 @@ com.liferay.document.library.repository.cmis.impl=4.0.12
 com.liferay.document.library.repository.external.api=3.0.5
 com.liferay.document.library.repository.portlet.file.repository.impl=1.0.3
 com.liferay.document.library.repository.portlet.file.repository.test=1.0.0
+com.liferay.document.library.repository.portlet.repository.impl=1.0.2
+com.liferay.document.library.repository.portlet.repository.test=1.0.0
 com.liferay.document.library.repository.search=5.0.1
 com.liferay.document.library.service=4.0.21
 com.liferay.document.library.sync.api=2.0.4
@@ -322,7 +324,7 @@ com.liferay.external.reference.api=2.0.4
 com.liferay.external.reference.service=2.0.5
 com.liferay.flags.api=4.0.7
 com.liferay.flags.service=4.0.6
-com.liferay.flags.taglib=4.0.17
+com.liferay.flags.taglib=4.1.0
 com.liferay.flags.web=4.0.5
 com.liferay.flash.web=3.0.4
 com.liferay.fragment.api=2.17.3
@@ -500,7 +502,7 @@ com.liferay.layout.content.page.editor.web=1.0.39
 com.liferay.layout.impl=4.0.15
 com.liferay.layout.item.selector.api=3.0.2
 com.liferay.layout.item.selector.web=3.0.4
-com.liferay.layout.page.template.api=2.2.2
+com.liferay.layout.page.template.api=2.3.0
 com.liferay.layout.page.template.service=2.1.17
 com.liferay.layout.page.template.test=1.0.0
 com.liferay.layout.portlets.web=1.0.5
@@ -547,7 +549,7 @@ com.liferay.marketplace.test=1.0.0
 com.liferay.mentions.api=4.0.7
 com.liferay.mentions.service=4.0.4
 com.liferay.mentions.web=4.0.10
-com.liferay.message.boards.api=5.1.6
+com.liferay.message.boards.api=5.2.0
 com.liferay.message.boards.comment=4.0.3
 com.liferay.message.boards.demo=2.0.1
 com.liferay.message.boards.demo.data.creator.api=2.0.2
