LPS-99711 portal-search-admin-web: Search Panel Category
https://issues.liferay.com/browse/LPS-99711

--- a/modules/apps/portal-search/portal-search-admin-web/build.gradle
+++ b/modules/apps/portal-search/portal-search-admin-web/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 	compileOnly project(":apps:portal-instances:portal-instances-api")
 	compileOnly project(":apps:portal-portlet-bridge:portal-portlet-bridge-soy-api")
 	compileOnly project(":apps:portal-search:portal-search-api")
+	compileOnly project(":apps:portal-search:portal-search-web-api")
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-string")
